--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.0",
     "@types/uuid": "^9.0.7",
     "chrono-node": "^2.7.0",
     "date-fns": "^3.0.6",
